# crox

./: .gitignore  Dockerfile  OUTBOUND.md  README.md  crox.yaml  deploy.sh  nginx.conf  package-lock.json  package.json  requirements.txt
.claude/: settings.json
client/: astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/.astro/: settings.json
client/public/: llms.txt  robots.txt  sitemap.xml
client/scripts/: prerender.mjs
client/src/: index.css  main.tsx
client/src/components/: AssessmentQuiz.tsx  BlogFaqAccordion.tsx  ChatWidget.tsx  ContactForm.tsx  ContentLayout.tsx  FaqAccordion.tsx  Layout.tsx  ServerDirectory.tsx
client/src/content/: blogPosts.ts  learnPosts.ts  servers.ts
client/src/hooks/: usePageTracking.ts
client/src/layouts/: Base.astro
client/src/lib/: assessment.ts  email.ts  fibery.ts
client/src/pages/: AboutPage.tsx  AiIntegrationPage.tsx  HomePage.tsx  about.astro  ai-integration.astro  assessment.astro  board-exec.astro  contact.astro  education.astro  experiments.astro  index.astro  mapping.astro  projects.astro  readiness.astro  servers.astro  support.astro
server/: .env.example  DEPLOY.md  Dockerfile  README.md  WIDGET-4-PLAN.md  app.py  pyproject.toml
server/app/: assessment_questions.py  budget.py  config.py  main.py
server/app/api/: admin.py  assessment.py  capture.py  chat.py  contact_form.py  outbound.py
server/app/services/: analytics.py  db.py  email.py  fibery.py  flight_deck.py
server/prompts/: system.md
(+35 files in other folders)
