[project]
name = "crox-chat"
version = "0.1.0"
description = "Crox chat widget backend — streams Claude responses, captures leads to Fibery via flight-deck /api/forms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "posthog>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
